--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,43 +1,37 @@
+name: Deploy to Amazon ECS
+
 on:
   push:
     branches:
-      - main
-
-name: Deploy to Amazon ECS
+      - main  
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check commit status
-      id: commit-status
-      run: |
-        # Check the status of the Git commit
-        CURRENT_STATUS=$(curl --url https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/status --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '.state');
-        echo "Current status is: $CURRENT_STATUS"
-        while [ "${CURRENT_STATUS^^}" = "PENDING" ]; 
-          do sleep 10; 
-          CURRENT_STATUS=$(curl --url https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/status --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' | jq -r '.state');
-        done;
-        echo "Current status is: $CURRENT_STATUS"
-        if [ "${CURRENT_STATUS^^}" = "FAILURE" ]; 
-          then echo "Commit status failed. Canceling execution"; 
-          exit 1; 
-        fi
-        
-    - name: Checkout
-      uses: actions/checkout@v1
+    - name: Check out the code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run tests
+      run: python app_test.py
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+        aws-region: us-east-2  # Replace with your AWS region
 
-    - name: Login to Amazon ECR
+    - name: Log in to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
@@ -48,13 +42,9 @@ jobs:
         ECR_REPOSITORY: ecs-devops-sandbox-repository
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        
+
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
