--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,17 @@
 version: 0.2
+
 phases:
   install:
     runtime-versions:
       python: 3.10
+    commands:
+      # Upgrade pip to the latest version
+      - pip install --upgrade pip
   pre_build:
     commands:
+      # Install application dependencies
       - pip install -r requirements.txt
+  build:
+    commands:
+      # Run tests
       - python app_test.py
