--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,13 +5,12 @@ phases:
     runtime-versions:
       python: 3.10
     commands:
-      # Upgrade pip to the latest version
+      - python -m venv env
+      - source env/bin/activate
       - pip install --upgrade pip
   pre_build:
     commands:
-      # Install application dependencies
       - pip install -r requirements.txt
   build:
     commands:
-      # Run tests
       - python app_test.py
