--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         python-version: '3.8'
 
+    - name: Install AWS CDK
+      run: pip install aws-cdk.core
+
     - name: Install dependencies
       run: pip install -r requirements.txt
 
