--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,16 @@ phases:
       python: 3.10
     commands:
       - python -m venv env
-      - source env/bin/activate
+      - source env/bin/activate || . env/bin/activate
       - pip install --upgrade pip
+      - pip install -r requirements.txt
   pre_build:
     commands:
-      - pip install -r requirements.txt
+      - python app_test.py
   build:
     commands:
-      - python app_test.py
+      - echo "Build completed successfully"
+
+artifacts:
+  files:
+    - '**/*'
