--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - source env/bin/activate || . env/bin/activate
       - pip install --upgrade pip
       - pip install -r requirements.txt
+      - pip install aws-cdk.core  # Install aws-cdk module
   pre_build:
     commands:
       - python app_test.py
