--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,13 @@ phases:
       - python -m venv env
       - source env/bin/activate || . env/bin/activate
       - pip install --upgrade pip
-      - pip install -r requirements.txt
-      - pip install aws-cdk.core  # Install aws-cdk module
-      - pip install -e ./ecs_devops_sandbox_cdk  # Install your local CDK module if needed
+      - pip install -r requirements.txt  # Install other project dependencies if needed
+      - pip install -e ./ecs_devops_sandbox_cdk  # Install your module in editable mode
+
   pre_build:
     commands:
       - python app_test.py
+
   build:
     commands:
       - echo "Build completed successfully"
