--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,13 +6,13 @@ phases:
       python: 3.10
     commands:
       # Create necessary directories if they do not exist
-      - mkdir -p /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/
+      - mkdir -p /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk
 
       # Debugging: List contents of parent directory
-      - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/
+      - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/
 
       # Navigate explicitly to the correct directory (if it exists)
-      - cd /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk || exit 1
+      - cd /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk || { echo "Directory not found"; exit 1; }
 
       # Install the CDK module if the directory exists
       - pip install .
