--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,11 @@ phases:
 
   pre_build:
     commands:
-      - python app_test.py
+      # List files in the current directory for debugging
+      - ls -al
+
+      # Run app_test.py if it exists
+      - python app_test.py || { echo "app_test.py not found or failed to execute"; exit 1; }
 
   build:
     commands:
