--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,11 @@ phases:
       - echo "Listing files in the root of the repository:"
       - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox
 
+      # Check for app_test.py in the root of the repository
+      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py ]; then echo "app_test.py found in the root of the repository"; else echo "app_test.py not found in the root of the repository"; exit 1; fi
+
       # Move the app_test.py file to the correct directory if it exists
-      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py ]; then mv /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/; else echo "app_test.py not found in the root of the repository"; exit 1; fi
+      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py ]; then mv /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/; fi
 
       # Navigate explicitly to the correct directory
       - cd /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk || { echo "Directory not found"; exit 1; }
