--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,41 +5,34 @@ phases:
     runtime-versions:
       python: 3.10
     commands:
-      # Ensure the target directory exists
+      # Ensure the target directories exist
       - mkdir -p /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk
+      - mkdir -p /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox
 
-      # Debugging: List files in the root of the repository
-      - echo "Listing files in the root of the repository:"
-      - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox
+      # Create app_test.py if it doesn't exist
+      - if [ ! -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py ]; then
+            echo "Creating app_test.py"; 
+            echo -e "from app import returnBackwardsString\nimport unittest\n\nclass TestApp(unittest.TestCase):\n    def test_return_backwards_string(self):\n        random_string = 'This is my test string'\n        random_string_reversed = 'gnirts tset ym si sihT'\n        self.assertEqual(random_string_reversed, returnBackwardsString(random_string))\n\nif __name__ == '__main__':\n    unittest.main()" > /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py; 
+        else echo "app_test.py found"; 
+        fi
 
-      # Check for app_test.py in the root of the repository and create if not found
-      - if [ ! -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py ]; then echo "Creating app_test.py"; echo -e "print('Hello, World!')" > /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py; else echo "app_test.py found in the root of the repository"; fi
+      # Move app_test.py to the correct directory
+      - mv /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/ || true
 
-      # Move the app_test.py file to the correct directory if it exists
-      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py ]; then mv /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/app_test.py /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/; fi
-
-      # Navigate explicitly to the correct directory
+      # Navigate to the correct directory
       - cd /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk || { echo "Directory not found"; exit 1; }
 
-      # Install dependencies using pip directly
+      # Install dependencies using pip
       - pip install flask jinja2  # Example dependencies
 
   pre_build:
     commands:
-      # List files in the current directory for debugging
+      # List files for debugging
       - echo "Listing files in the current directory:"
       - ls -al
 
-      # List files in the parent directory for further debugging
-      - echo "Listing files in the parent directory:"
-      - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox
-
-      # List files in app_test.py directory
-      - echo "Listing files in the ecs_devops_sandbox_cdk directory:"
-      - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk
-
       # Run app_test.py if it exists
-      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py ]; then python /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py; else echo "app_test.py not found"; exit 1; fi
+      - if [ -f app_test.py ]; then python app_test.py; else echo "app_test.py not found"; exit 1; fi
 
   build:
     commands:
