--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,15 +12,12 @@ phases:
       - echo "Listing files in the root of the repository:"
       - ls -al /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox
 
-      # Check for app_test.py in the root of the repository and create if not found
+      # Check for app_test.py in the correct directory and create if not found
       - if [ ! -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py ]; then
             echo "Creating app_test.py"; 
             echo -e "from app import returnBackwardsString\nimport unittest\n\nclass TestApp(unittest.TestCase):\n    def test_return_backwards_string(self):\n        random_string = 'This is my test string'\n        random_string_reversed = 'gnirts tset ym si sihT'\n        self.assertEqual(random_string_reversed, returnBackwardsString(random_string))\n\nif __name__ == '__main__':\n    unittest.main()" > /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py; 
         else echo "app_test.py found"; 
         fi
-
-      # Move the app_test.py file to the correct directory if it exists
-      - if [ -f /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py ]; then mv /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/app_test.py /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk/; fi
 
       # Navigate explicitly to the correct directory
       - cd /codebuild/output/src498875578/src/github.com/VinodPandhare/ecs-devops-sandbox/ecs_devops_sandbox_cdk || { echo "Directory not found"; exit 1; }
