--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,10 @@ phases:
   install:
     runtime-versions:
       python: 3.10
+      nodejs: 14  # Ensure Node.js is installed (adjust version as needed)
     commands:
-      - pip install -r requirements.txt  # Install your project requirements
-      - pip install aws-cdk  # Install the aws_cdk module
+      - pip install -r requirements.txt  # Install Python dependencies if any
+      - npm install -g aws-cdk  # Install AWS CDK globally with npm
 
   pre_build:
     commands:
