--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     runtime-versions:
       python: 3.10
-      nodejs: 14  # Ensure Node.js is installed (adjust version as needed)
+      nodejs: 16  # Use Node.js version 16 instead of 14
     commands:
       - pip install -r requirements.txt  # Install Python dependencies if any
       - npm install -g aws-cdk  # Install AWS CDK globally with npm
